CSS modules classes autocomplete

--- a/src/common/components/card/card.module.scss
+++ b/src/common/components/card/card.module.scss
@@ -1,7 +1,11 @@
 .card {
   color: red;
-}
 
-.cardTitle {
-  color: red;
+  &Title {
+    color: red;
+  }
+
+  &SomethingElse {
+    color: red;
+  }
 }
